tests/negative/UnsupportedType.juvix
module UnsupportedType;

type List' (A : Type -> Type) :=
  | nil'
  | cons' A (List' A);
